opsdir/tests/golden/render-before/rtx-next-prod/terraform/main.tf
# Generated by opsdir from env=prod,cloud=rtx-next,ou=environments,dc=ciam-ops
# Azure infrastructure for the CIAM platform
# Do not edit. Change the operations directory (under an approved change) and re-render.
# UNBOUND: required role 'backup-target' has no binding in this environment
# Interconnect 'link-aws-current' to env=prod,cloud=aws-current,ou=environments,dc=ciam-ops: site-to-site VPN (landing-zone managed). Provided by the landing zone; not managed here.

data "azurerm_resource_group" "main" {
  name = "rg-ciam-prod"
}

data "azurerm_virtual_network" "main" {
  name                = "vnet-ciam-prod"
  resource_group_name = data.azurerm_resource_group.main.name
}

data "azurerm_subnet" "snet_ds" {
  name                 = "snet-ds"
  virtual_network_name = "vnet-ciam-prod"
  resource_group_name  = data.azurerm_resource_group.main.name
}

data "azurerm_subnet" "snet_pf" {
  name                 = "snet-pf"
  virtual_network_name = "vnet-ciam-prod"
  resource_group_name  = data.azurerm_resource_group.main.name
}

resource "azurerm_network_security_group" "ds" {
  name                = "nsg-ciam-prod-ds"
  location            = data.azurerm_resource_group.main.location
  resource_group_name = data.azurerm_resource_group.main.name
  tags = {
    ManagedBy = "opsdir"
  }
}

resource "azurerm_network_security_group" "pf_admin" {
  name                = "nsg-ciam-prod-pf-admin"
  location            = data.azurerm_resource_group.main.location
  resource_group_name = data.azurerm_resource_group.main.name
  tags = {
    ManagedBy = "opsdir"
  }
}

resource "azurerm_network_security_group" "pf_engine" {
  name                = "nsg-ciam-prod-pf-engine"
  location            = data.azurerm_resource_group.main.location
  resource_group_name = data.azurerm_resource_group.main.name
  tags = {
    ManagedBy = "opsdir"
  }
}

resource "azurerm_network_security_rule" "fw_admin" {
  name                        = "fw-admin"
  description                 = "fw-admin"
  priority                    = 150
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_ranges     = ["4444"]
  source_address_prefixes     = ["10.60.9.0/28"]
  destination_address_prefix  = "*"
  resource_group_name         = data.azurerm_resource_group.main.name
  network_security_group_name = azurerm_network_security_group.ds.name
}

resource "azurerm_network_security_rule" "fw_customer_portal" {
  name                        = "fw-customer-portal"
  description                 = "consumer customer-portal-svc"
  priority                    = 110
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_ranges     = ["1636"]
  source_address_prefixes     = ["10.30.8.0/24"]
  destination_address_prefix  = "*"
  resource_group_name         = data.azurerm_resource_group.main.name
  network_security_group_name = azurerm_network_security_group.ds.name
}

resource "azurerm_network_security_rule" "fw_idm_sync" {
  name                        = "fw-idm-sync"
  description                 = "consumer idm-sync"
  priority                    = 130
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_ranges     = ["1636"]
  source_address_prefixes     = ["10.60.6.0/24"]
  destination_address_prefix  = "*"
  resource_group_name         = data.azurerm_resource_group.main.name
  network_security_group_name = azurerm_network_security_group.ds.name
}

resource "azurerm_network_security_rule" "fw_pf_ds_svc" {
  name                        = "fw-pf-ds-svc"
  description                 = "consumer pf-ds-svc"
  priority                    = 100
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_ranges     = ["1636"]
  source_address_prefixes     = ["10.60.2.0/24"]
  destination_address_prefix  = "*"
  resource_group_name         = data.azurerm_resource_group.main.name
  network_security_group_name = azurerm_network_security_group.ds.name
}

resource "azurerm_network_security_rule" "fw_replication" {
  name                        = "fw-replication"
  description                 = "fw-replication"
  priority                    = 140
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_ranges     = ["8989"]
  source_address_prefixes     = ["10.60.1.0/24", "10.20.0.0/16"]
  destination_address_prefix  = "*"
  resource_group_name         = data.azurerm_resource_group.main.name
  network_security_group_name = azurerm_network_security_group.ds.name
}

resource "azurerm_network_security_rule" "fw_sso_public" {
  name                        = "fw-sso-public"
  description                 = "fw-sso-public"
  priority                    = 160
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_ranges     = ["443"]
  source_address_prefixes     = ["0.0.0.0/0"]
  destination_address_prefix  = "*"
  resource_group_name         = data.azurerm_resource_group.main.name
  network_security_group_name = azurerm_network_security_group.pf_engine.name
}

resource "azurerm_network_security_rule" "fw_supplier_portal" {
  name                        = "fw-supplier-portal"
  description                 = "consumer supplier-portal-svc"
  priority                    = 120
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_ranges     = ["1636"]
  source_address_prefixes     = ["10.31.2.0/24"]
  destination_address_prefix  = "*"
  resource_group_name         = data.azurerm_resource_group.main.name
  network_security_group_name = azurerm_network_security_group.ds.name
}

resource "azurerm_network_interface" "ds_1" {
  name                = "nic-ds-1"
  location            = data.azurerm_resource_group.main.location
  resource_group_name = data.azurerm_resource_group.main.name
  ip_configuration {
    name                          = "primary"
    subnet_id                     = data.azurerm_subnet.snet_ds.id
    private_ip_address_allocation = "Static"
    private_ip_address            = "10.60.1.11"
  }
}

resource "azurerm_network_interface_security_group_association" "ds_1" {
  network_interface_id      = azurerm_network_interface.ds_1.id
  network_security_group_id = azurerm_network_security_group.ds.id
}

resource "azurerm_linux_virtual_machine" "ds_1" {
  name                  = "ds-1"
  computer_name         = "ds-1"
  resource_group_name   = data.azurerm_resource_group.main.name
  location              = data.azurerm_resource_group.main.location
  size                  = "Standard_D4s_v5"
  zone                  = "1"
  admin_username        = "ciamadmin"
  network_interface_ids = [azurerm_network_interface.ds_1.id]
  source_image_id       = "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-ciam-images/providers/Microsoft.Compute/images/pingds-7.5.1-rhel9"
  admin_ssh_key {
    username   = "ciamadmin"
    public_key = var.admin_ssh_public_key
  }
  os_disk {
    caching                = "ReadWrite"
    storage_account_type   = "Premium_LRS"
    disk_encryption_set_id = "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-ciam-prod/providers/Microsoft.Compute/diskEncryptionSets/des-ciam-prod"
  }
  tags = {
    Role      = "ds"
    Hostname  = "ds-1.az.internal.example-aero.test"
    Product   = "PingDS 7.5.1"
    ManagedBy = "opsdir"
  }
}

resource "azurerm_network_interface" "ds_2" {
  name                = "nic-ds-2"
  location            = data.azurerm_resource_group.main.location
  resource_group_name = data.azurerm_resource_group.main.name
  ip_configuration {
    name                          = "primary"
    subnet_id                     = data.azurerm_subnet.snet_ds.id
    private_ip_address_allocation = "Static"
    private_ip_address            = "10.60.1.12"
  }
}

resource "azurerm_network_interface_security_group_association" "ds_2" {
  network_interface_id      = azurerm_network_interface.ds_2.id
  network_security_group_id = azurerm_network_security_group.ds.id
}

resource "azurerm_linux_virtual_machine" "ds_2" {
  name                  = "ds-2"
  computer_name         = "ds-2"
  resource_group_name   = data.azurerm_resource_group.main.name
  location              = data.azurerm_resource_group.main.location
  size                  = "Standard_D4s_v5"
  zone                  = "2"
  admin_username        = "ciamadmin"
  network_interface_ids = [azurerm_network_interface.ds_2.id]
  source_image_id       = "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-ciam-images/providers/Microsoft.Compute/images/pingds-7.5.1-rhel9"
  admin_ssh_key {
    username   = "ciamadmin"
    public_key = var.admin_ssh_public_key
  }
  os_disk {
    caching                = "ReadWrite"
    storage_account_type   = "Premium_LRS"
    disk_encryption_set_id = "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-ciam-prod/providers/Microsoft.Compute/diskEncryptionSets/des-ciam-prod"
  }
  tags = {
    Role      = "ds"
    Hostname  = "ds-2.az.internal.example-aero.test"
    Product   = "PingDS 7.5.1"
    ManagedBy = "opsdir"
  }
}

resource "azurerm_network_interface" "ds_3" {
  name                = "nic-ds-3"
  location            = data.azurerm_resource_group.main.location
  resource_group_name = data.azurerm_resource_group.main.name
  ip_configuration {
    name                          = "primary"
    subnet_id                     = data.azurerm_subnet.snet_ds.id
    private_ip_address_allocation = "Static"
    private_ip_address            = "10.60.1.13"
  }
}

resource "azurerm_network_interface_security_group_association" "ds_3" {
  network_interface_id      = azurerm_network_interface.ds_3.id
  network_security_group_id = azurerm_network_security_group.ds.id
}

resource "azurerm_linux_virtual_machine" "ds_3" {
  name                  = "ds-3"
  computer_name         = "ds-3"
  resource_group_name   = data.azurerm_resource_group.main.name
  location              = data.azurerm_resource_group.main.location
  size                  = "Standard_D4s_v5"
  zone                  = "3"
  admin_username        = "ciamadmin"
  network_interface_ids = [azurerm_network_interface.ds_3.id]
  source_image_id       = "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-ciam-images/providers/Microsoft.Compute/images/pingds-7.5.1-rhel9"
  admin_ssh_key {
    username   = "ciamadmin"
    public_key = var.admin_ssh_public_key
  }
  os_disk {
    caching                = "ReadWrite"
    storage_account_type   = "Premium_LRS"
    disk_encryption_set_id = "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-ciam-prod/providers/Microsoft.Compute/diskEncryptionSets/des-ciam-prod"
  }
  tags = {
    Role      = "ds"
    Hostname  = "ds-3.az.internal.example-aero.test"
    Product   = "PingDS 7.5.1"
    ManagedBy = "opsdir"
  }
}

resource "azurerm_network_interface" "pf_admin_1" {
  name                = "nic-pf-admin-1"
  location            = data.azurerm_resource_group.main.location
  resource_group_name = data.azurerm_resource_group.main.name
  ip_configuration {
    name                          = "primary"
    subnet_id                     = data.azurerm_subnet.snet_pf.id
    private_ip_address_allocation = "Static"
    private_ip_address            = "10.60.2.10"
  }
}

resource "azurerm_network_interface_security_group_association" "pf_admin_1" {
  network_interface_id      = azurerm_network_interface.pf_admin_1.id
  network_security_group_id = azurerm_network_security_group.pf_admin.id
}

resource "azurerm_linux_virtual_machine" "pf_admin_1" {
  name                  = "pf-admin-1"
  computer_name         = "pf-admin-1"
  resource_group_name   = data.azurerm_resource_group.main.name
  location              = data.azurerm_resource_group.main.location
  size                  = "Standard_D2s_v5"
  zone                  = "1"
  admin_username        = "ciamadmin"
  network_interface_ids = [azurerm_network_interface.pf_admin_1.id]
  source_image_id       = "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-ciam-images/providers/Microsoft.Compute/images/pingfederate-12.1.4-rhel9"
  admin_ssh_key {
    username   = "ciamadmin"
    public_key = var.admin_ssh_public_key
  }
  os_disk {
    caching                = "ReadWrite"
    storage_account_type   = "Premium_LRS"
    disk_encryption_set_id = "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-ciam-prod/providers/Microsoft.Compute/diskEncryptionSets/des-ciam-prod"
  }
  tags = {
    Role      = "pf-admin"
    Hostname  = "pf-admin-1.az.internal.example-aero.test"
    Product   = "PingFederate 12.1.4"
    ManagedBy = "opsdir"
  }
}

resource "azurerm_network_interface" "pf_engine_1" {
  name                = "nic-pf-engine-1"
  location            = data.azurerm_resource_group.main.location
  resource_group_name = data.azurerm_resource_group.main.name
  ip_configuration {
    name                          = "primary"
    subnet_id                     = data.azurerm_subnet.snet_pf.id
    private_ip_address_allocation = "Static"
    private_ip_address            = "10.60.2.21"
  }
}

resource "azurerm_network_interface_security_group_association" "pf_engine_1" {
  network_interface_id      = azurerm_network_interface.pf_engine_1.id
  network_security_group_id = azurerm_network_security_group.pf_engine.id
}

resource "azurerm_linux_virtual_machine" "pf_engine_1" {
  name                  = "pf-engine-1"
  computer_name         = "pf-engine-1"
  resource_group_name   = data.azurerm_resource_group.main.name
  location              = data.azurerm_resource_group.main.location
  size                  = "Standard_D2s_v5"
  zone                  = "1"
  admin_username        = "ciamadmin"
  network_interface_ids = [azurerm_network_interface.pf_engine_1.id]
  source_image_id       = "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-ciam-images/providers/Microsoft.Compute/images/pingfederate-12.1.4-rhel9"
  admin_ssh_key {
    username   = "ciamadmin"
    public_key = var.admin_ssh_public_key
  }
  os_disk {
    caching                = "ReadWrite"
    storage_account_type   = "Premium_LRS"
    disk_encryption_set_id = "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-ciam-prod/providers/Microsoft.Compute/diskEncryptionSets/des-ciam-prod"
  }
  tags = {
    Role      = "pf-engine"
    Hostname  = "pf-engine-1.az.internal.example-aero.test"
    Product   = "PingFederate 12.1.4"
    ManagedBy = "opsdir"
  }
}

resource "azurerm_network_interface" "pf_engine_2" {
  name                = "nic-pf-engine-2"
  location            = data.azurerm_resource_group.main.location
  resource_group_name = data.azurerm_resource_group.main.name
  ip_configuration {
    name                          = "primary"
    subnet_id                     = data.azurerm_subnet.snet_pf.id
    private_ip_address_allocation = "Static"
    private_ip_address            = "10.60.2.22"
  }
}

resource "azurerm_network_interface_security_group_association" "pf_engine_2" {
  network_interface_id      = azurerm_network_interface.pf_engine_2.id
  network_security_group_id = azurerm_network_security_group.pf_engine.id
}

resource "azurerm_linux_virtual_machine" "pf_engine_2" {
  name                  = "pf-engine-2"
  computer_name         = "pf-engine-2"
  resource_group_name   = data.azurerm_resource_group.main.name
  location              = data.azurerm_resource_group.main.location
  size                  = "Standard_D2s_v5"
  zone                  = "2"
  admin_username        = "ciamadmin"
  network_interface_ids = [azurerm_network_interface.pf_engine_2.id]
  source_image_id       = "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-ciam-images/providers/Microsoft.Compute/images/pingfederate-12.1.4-rhel9"
  admin_ssh_key {
    username   = "ciamadmin"
    public_key = var.admin_ssh_public_key
  }
  os_disk {
    caching                = "ReadWrite"
    storage_account_type   = "Premium_LRS"
    disk_encryption_set_id = "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-ciam-prod/providers/Microsoft.Compute/diskEncryptionSets/des-ciam-prod"
  }
  tags = {
    Role      = "pf-engine"
    Hostname  = "pf-engine-2.az.internal.example-aero.test"
    Product   = "PingFederate 12.1.4"
    ManagedBy = "opsdir"
  }
}

resource "azurerm_lb" "svc_ldaps" {
  name                = "lb-ciam-prod-svc-ldaps"
  location            = data.azurerm_resource_group.main.location
  resource_group_name = data.azurerm_resource_group.main.name
  sku                 = "Standard"
  frontend_ip_configuration {
    name                          = "frontend"
    zones                         = ["1", "2", "3"]
    subnet_id                     = data.azurerm_subnet.snet_ds.id
    private_ip_address_allocation = "Static"
    private_ip_address            = "10.60.1.100"
  }
  tags = {
    Service   = "ldap.id.cloud.example-aero.test"
    ManagedBy = "opsdir"
  }
}

resource "azurerm_lb_backend_address_pool" "svc_ldaps" {
  name            = "servers"
  loadbalancer_id = azurerm_lb.svc_ldaps.id
}

resource "azurerm_network_interface_backend_address_pool_association" "svc_ldaps_ds_1" {
  network_interface_id    = azurerm_network_interface.ds_1.id
  ip_configuration_name   = "primary"
  backend_address_pool_id = azurerm_lb_backend_address_pool.svc_ldaps.id
}

resource "azurerm_network_interface_backend_address_pool_association" "svc_ldaps_ds_2" {
  network_interface_id    = azurerm_network_interface.ds_2.id
  ip_configuration_name   = "primary"
  backend_address_pool_id = azurerm_lb_backend_address_pool.svc_ldaps.id
}

resource "azurerm_network_interface_backend_address_pool_association" "svc_ldaps_ds_3" {
  network_interface_id    = azurerm_network_interface.ds_3.id
  ip_configuration_name   = "primary"
  backend_address_pool_id = azurerm_lb_backend_address_pool.svc_ldaps.id
}

resource "azurerm_lb_probe" "svc_ldaps_1636" {
  name            = "tcp-1636"
  loadbalancer_id = azurerm_lb.svc_ldaps.id
  protocol        = "Tcp"
  port            = 1636
}

resource "azurerm_lb_rule" "svc_ldaps_1636" {
  name                           = "tcp-1636"
  loadbalancer_id                = azurerm_lb.svc_ldaps.id
  protocol                       = "Tcp"
  frontend_port                  = 1636
  backend_port                   = 1636
  frontend_ip_configuration_name = "frontend"
  backend_address_pool_ids       = [azurerm_lb_backend_address_pool.svc_ldaps.id]
  probe_id                       = azurerm_lb_probe.svc_ldaps_1636.id
}

resource "azurerm_private_dns_a_record" "svc_ldaps" {
  name                = "ldap"
  zone_name           = "id.cloud.example-aero.test"
  resource_group_name = data.azurerm_resource_group.main.name
  ttl                 = 300
  records             = ["10.60.1.100"]
}

resource "azurerm_lb" "svc_sso" {
  name                = "lb-ciam-prod-svc-sso"
  location            = data.azurerm_resource_group.main.location
  resource_group_name = data.azurerm_resource_group.main.name
  sku                 = "Standard"
  frontend_ip_configuration {
    name                          = "frontend"
    zones                         = ["1", "2", "3"]
    subnet_id                     = data.azurerm_subnet.snet_pf.id
    private_ip_address_allocation = "Static"
    private_ip_address            = "198.51.100.77"
  }
  tags = {
    Service   = "sso.example-aero.test"
    ManagedBy = "opsdir"
  }
}

resource "azurerm_lb_backend_address_pool" "svc_sso" {
  name            = "servers"
  loadbalancer_id = azurerm_lb.svc_sso.id
}

resource "azurerm_network_interface_backend_address_pool_association" "svc_sso_pf_engine_1" {
  network_interface_id    = azurerm_network_interface.pf_engine_1.id
  ip_configuration_name   = "primary"
  backend_address_pool_id = azurerm_lb_backend_address_pool.svc_sso.id
}

resource "azurerm_network_interface_backend_address_pool_association" "svc_sso_pf_engine_2" {
  network_interface_id    = azurerm_network_interface.pf_engine_2.id
  ip_configuration_name   = "primary"
  backend_address_pool_id = azurerm_lb_backend_address_pool.svc_sso.id
}

resource "azurerm_lb_probe" "svc_sso_443" {
  name            = "tcp-443"
  loadbalancer_id = azurerm_lb.svc_sso.id
  protocol        = "Tcp"
  port            = 443
}

resource "azurerm_lb_rule" "svc_sso_443" {
  name                           = "tcp-443"
  loadbalancer_id                = azurerm_lb.svc_sso.id
  protocol                       = "Tcp"
  frontend_port                  = 443
  backend_port                   = 443
  frontend_ip_configuration_name = "frontend"
  backend_address_pool_ids       = [azurerm_lb_backend_address_pool.svc_sso.id]
  probe_id                       = azurerm_lb_probe.svc_sso_443.id
}

resource "azurerm_private_dns_a_record" "svc_sso" {
  name                = "sso"
  zone_name           = "example-aero.test"
  resource_group_name = data.azurerm_resource_group.main.name
  ttl                 = 300
  records             = ["198.51.100.77"]
}

data "azurerm_key_vault" "kv_ciam_prod" {
  name                = "kv-ciam-prod"
  resource_group_name = data.azurerm_resource_group.main.name
}

data "azurerm_key_vault_secret" "ds_deployment_id" {
  name         = "ds-deployment-id"
  key_vault_id = data.azurerm_key_vault.kv_ciam_prod.id
}

data "azurerm_key_vault_secret" "ds_deployment_password" {
  name         = "ds-deployment-password"
  key_vault_id = data.azurerm_key_vault.kv_ciam_prod.id
}

data "azurerm_key_vault_secret" "ds_root_password" {
  name         = "ds-root-password"
  key_vault_id = data.azurerm_key_vault.kv_ciam_prod.id
}

data "azurerm_key_vault_secret" "ds_tls_keystore" {
  name         = "ds-tls-keystore"
  key_vault_id = data.azurerm_key_vault.kv_ciam_prod.id
}

data "azurerm_key_vault_secret" "pf_admin_password" {
  name         = "pf-admin-password"
  key_vault_id = data.azurerm_key_vault.kv_ciam_prod.id
}

data "azurerm_key_vault_secret" "pf_signing_key" {
  name         = "pf-signing-key"
  key_vault_id = data.azurerm_key_vault.kv_ciam_prod.id
}

data "azurerm_key_vault_secret" "sso_tls_keystore" {
  name         = "sso-tls-keystore"
  key_vault_id = data.azurerm_key_vault.kv_ciam_prod.id
}
